tdf#111550: A workaround for out-of-order (in-paragraph) tbl on OOXML

Word allows <w:tbl> to be direct child of <w:p>, which is illegal
according to ECMA-376-1:2016.

This allows for import the data in such tables (previously, this text
was simply dropped, causing dataloss) - bug-to-bug compatibility
with Word.

Change-Id: I19c17ab19915ea46685727c635476fe5df593212
Reviewed-on: https://gerrit.libreoffice.org/40909
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>